--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="sidebar">
 
       <div class="sidebar-item">
-        <div class="selection">
+        <div id="infoSelection" class="selection selected">
           <p>1</p>
         </div>
         <div class="step-container">
@@ -29,7 +29,7 @@
         </div>
       </div>
 
-      <div class="sidebar-item">
+      <div id="planSelection" class="sidebar-item">
         <div class="selection">
           <p>2</p>
         </div>
@@ -39,7 +39,7 @@
         </div>
       </div>
 
-      <div class="sidebar-item">
+      <div id="addOnsSelection" class="sidebar-item">
         <div class="selection">
           <p>3</p>
         </div>
@@ -49,7 +49,7 @@
         </div>
       </div>
 
-      <div class="sidebar-item">
+      <div id="summarySelection" class="sidebar-item">
         <div class="selection">
           <p>4</p>
         </div>
@@ -61,183 +61,189 @@
     </section>
     <!-- Sidebar end -->
 
-    <section class="form-section">
+    <!-- Step 1 start -->
+    <section class="form-section" id="infoSection">
+      <div class="title">
+        <h1>Personal Info</h1>
+        <p>Please provide your name, email address, and phone number.</p>
+      </div>
 
-      <!-- Step 1 start -->
-      <section id="infoSection">
-        <div class="title">
-          <h1>Personal Info</h1>
-          <p>Please provide your name, email address, and phone number.</p>
-        </div>
-
-        <div class="content-box">
-          <div class="input-wrapper">
-            <label for="name" name="name">Name</label>
-            <input id="nameInput" name="name" type="text" required placeholder="e.g. Stephen King">
+      <div class="content-box">
+        <div class="input-wrapper">
+          <div class="label-wrapper">
+            <label for="nameInput">Name</label>
           </div>
+          <input id="nameInput" name="name" type="text" autocomplete="name" autofocus required
+            placeholder="e.g. Stephen King">
+        </div>
 
-          <div class="input-wrapper">
-            <label for="email" name="email">Email Address</label>
-            <input id="emailInput" name="name" type="email" onchange="validateEmail()" required
-              placeholder="e.g. stephenking@lorem.com">
+        <div class="input-wrapper">
+          <div class="label-wrapper">
+            <label for="emailInput">Email Address</label>
           </div>
+          <input id="emailInput" name="email" type="email" onfocusout="validateEmail()" autocomplete="email" required
+            placeholder="e.g. stephenking@lorem.com">
+        </div>
 
-          <div class="input-wrapper">
-            <label for="phone" name="phone">Phone Number</label>
-            <input id="phoneInput" name="phone" type="number" onchange="validatePhone()" required
-              placeholder="e.g. +1 234 567 890">
+        <div class="input-wrapper">
+          <div class="label-wrapper">
+            <label for="phoneInput">Phone Number</label>
           </div>
+          <input id="phoneInput" name="phone" type="number" autocomplete="phone" onfocusout="validatePhone()" required
+            placeholder="e.g. +1 234 567 890">
         </div>
+      </div>
 
-        <div class="button-container">
-          <button class="primary-btn" id="nextBtnInfo">Next Step</button>
-        </div>
-      </section>
-      <!-- Step 1 end -->
+      <div class="btn-container">
+        <button class="primary-btn" id="nextBtnInfo">Next Step</button>
+      </div>
+    </section>
+    <!-- Step 1 end -->
 
-      <!-- Step 2 start -->
-      <section id="planSection" class="hidden">
-        <div class="title">
-          <h1>Select your plan</h1>
-          <p>You have the option of monthly or yearly billing.</p>
-        </div>
 
-        <div class="content-box">
-          <div class="card-grid">
-            <div class="card" id="arcade" data-plan="arcade">
-              <div class="card-image">
-                <img src="assets/images/icon-arcade.svg" alt="arcade game clipart">
-              </div>
-              <div class="card-content">
-                <h2>Arcade</h2>
-                <p id="arcadePrice">$9/mo</p>
-                <p class="yearly-dropdown hidden">2 months free</p>
-              </div>
+    <!-- Step 2 start -->
+    <section id="planSection" class="form-section hidden">
+      <div class="title">
+        <h1>Select your plan</h1>
+        <p>You have the option of monthly or yearly billing.</p>
+      </div>
+
+      <div class="content-box">
+        <div class="card-grid">
+          <div class="card" id="arcade" data-plan="arcade">
+            <div class="card-image">
+              <img src="assets/images/icon-arcade.svg" alt="arcade game clipart">
             </div>
-
-            <div class="card" id="advanced" data-plan="advanced">
-              <div class="card-image">
-                <img src="assets/images/icon-advanced.svg" alt="game controller clipart">
-              </div>
-              <div class="card-content">
-                <h2>Advanced</h2>
-                <p id="advancedPrice">$12/mo</p>
-                <p class="yearly-dropdown hidden">2 months free</p>
-              </div>
-            </div>
-
-            <div class="card" id="pro" data-plan="pro">
-              <div class="card-image">
-                <img src="assets/images/icon-pro.svg" alt="game controller clipart">
-              </div>
-              <div class="card-content">
-                <h2>Pro</h2>
-                <p id="proPrice">$15/mo</p>
-                <p class="yearly-dropdown hidden">2 months free</p>
-              </div>
+            <div class="card-content">
+              <h2>Arcade</h2>
+              <p id="arcadePrice">$9/mo</p>
+              <p class="yearly-dropdown hidden">2 months free</p>
             </div>
           </div>
 
-          <div class="toggle-wrapper">
-            <p id="monthly">Monthly</p>
-            <input type="checkbox" id="switch" /><label for="switch"></label>
-            <p id="yearly">Yearly</p>
-          </div>
-        </div>
-
-        <div class="button-container">
-          <button class="back-btn" id="backBtnPlan">back</button>
-          <button class="primary-btn" id="nextBtnPlan">Next Step</button>
-        </div>
-      </section>
-      <!-- Step 2 end -->
-
-      <!-- Step 3 start -->
-      <section id="addOnSection" class="hidden">
-        <div class="title">
-          <h1>Pick add-ons</h1>
-          <p>Add-ons help enhance your gaming experience.</p>
-        </div>
-
-        <div class="content-box">
-
-          <div class="radio-container">
-            <input type="radio" id="onlineService" value="online">
-            <div class="radio-info">
-              <label for="online">Online Service</label>
-              <p>Access to multiplayer games</p>
+          <div class="card" id="advanced" data-plan="advanced">
+            <div class="card-image">
+              <img src="assets/images/icon-advanced.svg" alt="game controller clipart">
             </div>
-            <p>+$1/mo</p>
-          </div>
-
-          <div class="radio-container">
-            <input type="radio" id="storage" value="storage">
-            <div class="radio-info">
-              <label for="storage">Larger storage</label>
-              <p>Extra 1TB of cloud save</p>
-            </div>
-            <p>+$2/mo</p>
-          </div>
-
-          <div class="radio-container">
-            <input type="radio" id="custom" value="custom">
-            <div class="radio-info">
-              <label for="custom">Customizable custom</label>
-              <p>Custom theme on your profile</p>
-            </div>
-            <p>+$2/mo</p>
-          </div>
-        </div>
-
-        <div class="button-container">
-          <button class="back-btn" id="backBtnAddOns">back</button>
-          <button class="primary-btn" id="nextBtnAddOns">Next Step</button>
-        </div>
-      </section>
-      <!-- Step 3 end -->
-
-      <!-- Step 4 start -->
-      <section id="summarySection" class="hidden">
-        <div class="title">
-          <h1>Finishing up</h1>
-          <p>Double-check everything looks OK before confirming.</p>
-        </div>
-
-        <div class="content-box">
-          <div id="finalContainer">
-            <div class="plan">
-              <div class="plan-title-wrapper">
-                <h2 id="plan">Arcade (Monthly)</h2>
-                <button id="changeBtn">Change</button>
-              </div>
-              <div class="plan-cost">
-                <h3 id="planCost">#9/mo</h3>
-              </div>
+            <div class="card-content">
+              <h2>Advanced</h2>
+              <p id="advancedPrice">$12/mo</p>
+              <p class="yearly-dropdown hidden">2 months free</p>
             </div>
           </div>
 
-          <div class="total">
-            <p id="totalText">Total(per month)</p>
-            <h3 id="total">+$12/mo</h3>
+          <div class="card" id="pro" data-plan="pro">
+            <div class="card-image">
+              <img src="assets/images/icon-pro.svg" alt="game controller clipart">
+            </div>
+            <div class="card-content">
+              <h2>Pro</h2>
+              <p id="proPrice">$15/mo</p>
+              <p class="yearly-dropdown hidden">2 months free</p>
+            </div>
           </div>
         </div>
 
-        <div class="button-container">
-          <button class="backBtn" id="backBtnSummary">back</button>
-          <button class="primary-btn confirm-btn" id="confirmBtn">Confirm</button>
+        <div class="toggle-wrapper">
+          <p id="monthly">Monthly</p>
+          <input type="checkbox" id="switch" /><label for="switch"></label>
+          <p id="yearly">Yearly</p>
         </div>
-      </section>
-      <!-- Step 4 end -->
+      </div>
 
-      <!-- Step 5 start -->
-      <section id="finalSection" class="final hidden">
-        <img src="assets/images/icon-thank-you.svg" alt="tick clipart">
-        <h2>Thank you!</h2>
-        <p>Thanks for confirming your subscription! We hope you have fun
-          using our platform. If you ever need support, please feel free
-          to email us at support@loremgaming.com.</p>
-      </section>
-      <!-- Step 5 end -->
+      <div class="button-container">
+        <button class="back-btn" id="backBtnPlan">back</button>
+        <button class="primary-btn" id="nextBtnPlan">Next Step</button>
+      </div>
+    </section>
+    <!-- Step 2 end -->
+
+    <!-- Step 3 start -->
+    <section id="addOnsSection" class="form-section hidden">
+      <div class="title">
+        <h1>Pick add-ons</h1>
+        <p>Add-ons help enhance your gaming experience.</p>
+      </div>
+
+      <div class="content-box">
+
+        <div class="radio-container">
+          <input type="radio" id="onlineService" value="online">
+          <div class="radio-info">
+            <label for="onlineService">Online Service</label>
+            <p>Access to multiplayer games</p>
+          </div>
+          <p>+$1/mo</p>
+        </div>
+
+        <div class="radio-container">
+          <input type="radio" id="storage" value="storage">
+          <div class="radio-info">
+            <label for="storage">Larger storage</label>
+            <p>Extra 1TB of cloud save</p>
+          </div>
+          <p>+$2/mo</p>
+        </div>
+
+        <div class="radio-container">
+          <input type="radio" id="custom" value="custom">
+          <div class="radio-info">
+            <label for="custom">Customizable custom</label>
+            <p>Custom theme on your profile</p>
+          </div>
+          <p>+$2/mo</p>
+        </div>
+      </div>
+
+      <div class="button-container">
+        <button class="back-btn" id="backBtnAddOns">back</button>
+        <button class="primary-btn" id="nextBtnAddOns">Next Step</button>
+      </div>
+    </section>
+    <!-- Step 3 end -->
+
+    <!-- Step 4 start -->
+    <section id="summarySection" class="form-section hidden">
+      <div class="title">
+        <h1>Finishing up</h1>
+        <p>Double-check everything looks OK before confirming.</p>
+      </div>
+
+      <div class="content-box">
+        <div id="finalContainer">
+          <div class="plan">
+            <div class="plan-title-wrapper">
+              <h2 id="plan">Arcade (Monthly)</h2>
+              <button id="changeBtn">Change</button>
+            </div>
+            <div class="plan-cost">
+              <h3 id="planCost">#9/mo</h3>
+            </div>
+          </div>
+        </div>
+
+        <div class="total">
+          <p id="totalText">Total(per month)</p>
+          <h3 id="total">+$12/mo</h3>
+        </div>
+      </div>
+
+      <div class="button-container">
+        <button class="backBtn" id="backBtnSummary">back</button>
+        <button class="primary-btn confirm-btn" id="confirmBtn">Confirm</button>
+      </div>
+    </section>
+    <!-- Step 4 end -->
+
+    <!-- Step 5 start -->
+    <section id="finalSection" class="final hidden">
+      <img src="assets/images/icon-thank-you.svg" alt="tick clipart">
+      <h2>Thank you!</h2>
+      <p>Thanks for confirming your subscription! We hope you have fun
+        using our platform. If you ever need support, please feel free
+        to email us at support@loremgaming.com.</p>
+    </section>
+    <!-- Step 5 end -->
 
     </section>
   </main>
