main logic works, total being updated correctly, along with text content. Need to refactor alot of things, add some better comments, deal with when th user goes back(need to clear past choices)

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
       <div>
         <div class="card-grid">
-          <div class="card active-card" id="arcade" data-plan="arcade">
+          <div class="card active-card" id="Arcade" data-plan="arcade" data-price="9">
             <div class="card-image">
               <img src="assets/images/icon-arcade.svg" alt="arcade game clipart">
             </div>
@@ -122,7 +122,7 @@
             </div>
           </div>
 
-          <div class="card" id="advanced" data-plan="advanced">
+          <div class="card" id="advanced" data-plan="Advanced" data-price="12">
             <div class="card-image">
               <img src="assets/images/icon-advanced.svg" alt="game controller clipart">
             </div>
@@ -133,7 +133,7 @@
             </div>
           </div>
 
-          <div class="card" id="pro" data-plan="pro">
+          <div class="card" id="pro" data-plan="Pro" data-price="15">
             <div class="card-image">
               <img src="assets/images/icon-pro.svg" alt="game controller clipart">
             </div>
@@ -189,7 +189,7 @@
         <div class="radio-container">
           <input type="checkbox" id="custom" value="custom">
           <div class="radio-info">
-            <label class="radioBox" for="custom">Customizable custom</label>
+            <label class="radioBox" for="custom">Customizable profile</label>
             <p>Custom theme on your profile</p>
           </div>
           <p id="customAddOn">+$2/mo</p>
@@ -218,14 +218,14 @@
               <button class="change-btn" id="changeBtn">Change</button>
             </div>
             <div class="plan-cost">
-              <h3 id="planCost">#9/mo</h3>
+              <h3>+$<span id="planCost">9</span><span id="planTime">/mo</span></h3>
             </div>
           </div>
         </div>
 
         <div class="total">
           <p id="totalText">Total(per month)</p>
-          <h3 id="total">+$12/mo</h3>
+          <h3>+$<span id="total">12</span><span id="totalTime">/mo</span></h3>
         </div>
       </div>
 
